--- a/consumables/content-filament-by-type-by-vendor.ejs
+++ b/consumables/content-filament-by-type-by-vendor.ejs
@@ -12,7 +12,9 @@
 						<th>Diameter</th>
 						<th>Weight</th>
 						<th>Range</th>
-						<th>Requires heated bed</th>
+						<th>Req's<br/>heated<br/>bed</th>
+						<th>Sugg'd<br/>hardened<br/>nozzle</th>
+						<th>Sugg'd<br/>larger<br/>nozzle</th>
 						<th class="text-center">Price</th>
 						<th class="text-center">Buy</th>
 					</tr>
@@ -27,7 +29,9 @@
 						<td rowspan="2"><img src="/images/filament/samples/robo-pla-jet-black.png"></td>
 						<td>1.75mm</td>
 						<td>500g</td>
-						<td>195-225ºC</td>
+						<td><nobr>195-225ºC</nobr></td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$20.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/pla-jet-black-500g" target="_blank">Link</a></td>
@@ -36,6 +40,8 @@
 						<td>1.75mm</td>
 						<td>1kg</td>
 						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$35.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/black-pla-1kg-spool" target="_blank">Link</a></td>
@@ -47,6 +53,8 @@
 						<td>500g</td>
 						<td>195-225ºC</td>
 						<td>No</td>
+						<td>No</td>
+						<td>No</td>
 						<td class="text-right">$20.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/pla-arctic-white-500g" target="_blank">Link</a></td>
 					</tr>
@@ -56,6 +64,8 @@
 						<td>1.75mm</td>
 						<td>1kg</td>
 						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$35.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/white-pla-1-kg-spool" target="_blank">Link</a></td>
@@ -67,6 +77,8 @@
 						<td>500g</td>
 						<td>195-225ºC</td>
 						<td>No</td>
+						<td>No</td>
+						<td>No</td>
 						<td class="text-right">$20.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/pla-cool-mid-gray-500g" target="_blank">Link</a></td>
 					</tr>
@@ -76,6 +88,8 @@
 						<td>1.75mm</td>
 						<td>1kg</td>
 						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$35.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/grey-pla-1-kg-spool" target="_blank">Link</a></td>
@@ -87,6 +101,8 @@
 						<td>500g</td>
 						<td>195-225ºC</td>
 						<td>No</td>
+						<td>No</td>
+						<td>No</td>
 						<td class="text-right">$20.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/pla-dynamic-blue-500g" target="_blank">Link</a></td>
 					</tr>
@@ -96,6 +112,8 @@
 						<td>1.75mm</td>
 						<td>1kg</td>
 						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$35.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/blue-pla-1-kg-spool" target="_blank">Link</a></td>
@@ -107,6 +125,8 @@
 						<td>1kg</td>
 						<td>195-225ºC</td>
 						<td>No</td>
+						<td>No</td>
+						<td>No</td>
 						<td class="text-right">$35.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/coral-blue" target="_blank">Link</a></td>
 					</tr>
@@ -116,6 +136,8 @@
 						<td>1.75mm</td>
 						<td>1kg</td>
 						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$35.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/chocolate-brown" target="_blank">Link</a></td>
@@ -127,6 +149,8 @@
 						<td>500g</td>
 						<td>195-225ºC</td>
 						<td>No</td>
+						<td>No</td>
+						<td>No</td>
 						<td class="text-right">$20.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/pla-apple-green-500g" target="_blank">Link</a></td>
 					</tr>
@@ -136,6 +160,8 @@
 						<td>1.75mm</td>
 						<td>1kg</td>
 						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$17.50</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/green-pla-1-kg-spool" target="_blank">Link</a></td>
@@ -147,6 +173,8 @@
 						<td>1kg</td>
 						<td>195-225ºC</td>
 						<td>No</td>
+						<td>No</td>
+						<td>No</td>
 						<td class="text-right">$35.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/marine-green-pla" target="_blank">Link</a></td>
 					</tr>
@@ -156,6 +184,8 @@
 						<td>1.75mm</td>
 						<td>1kg</td>
 						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$20.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/glow-in-the-dark-green-1-kg-spool" target="_blank">Link</a></td>
@@ -167,6 +197,8 @@
 						<td>1kg</td>
 						<td>195-225ºC</td>
 						<td>No</td>
+						<td>No</td>
+						<td>No</td>
 						<td class="text-right">$17.50</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/orange-pla-1-kg-spool" target="_blank">Link</a></td>
 					</tr>
@@ -176,6 +208,8 @@
 						<td>1.75mm</td>
 						<td>1kg</td>
 						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$17.50</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/pla-pink-1-kg-spool" target="_blank">Link</a></td>
@@ -187,6 +221,8 @@
 						<td>1kg</td>
 						<td>195-225ºC</td>
 						<td>No</td>
+						<td>No</td>
+						<td>No</td>
 						<td class="text-right">$40.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/new-pearl-purple-pla" target="_blank">Link</a></td>
 					</tr>
@@ -196,6 +232,8 @@
 						<td>1.75mm</td>
 						<td>500g</td>
 						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$20.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/pla-fiery-red-500g" target="_blank">Link</a></td>
@@ -207,6 +245,8 @@
 						<td>1kg</td>
 						<td>195-225ºC</td>
 						<td>No</td>
+						<td>No</td>
+						<td>No</td>
 						<td class="text-right">$20.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/strawberry-smellament-pla" target="_blank">Link</a></td>
 					</tr>
@@ -216,6 +256,8 @@
 						<td>1.75mm</td>
 						<td>1kg</td>
 						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
 						<td>No</td>
 						<td class="text-right">$17.50</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/yellow-pla-1-kg-spool" target="_blank">Link</a></td>
@@ -227,8 +269,136 @@
 						<td>1kg</td>
 						<td>195-225ºC</td>
 						<td>No</td>
+						<td>No</td>
+						<td>No</td>
 						<td class="text-right">$35.00</td>
 						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-pla/products/translucent-yellow-pla" target="_blank">Link</a></td>
+					</tr>
+
+					<!-- Specialty PLA -->
+					<!--   Robo3D.com -->
+					<tr>
+						<th scope="row" rowspan="5">Specialty PLA</th>
+						<td rowspan="5">Robo3D</td>
+						<td rowspan="2">Black with 15% carbon-fiber infused</td>
+						<td rowspan="2"><img src="/images/filament/samples/robo-pla-carbon-fiber.png"></td>
+						<td>1.75mm</td>
+						<td>500g</td>
+						<td>195-225ºC</td>
+						<td>No</td>
+						<td>Yes</td>
+						<td>No</td>
+						<td class="text-right">$40.00</td>
+						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-exotic/products/pla-carbon-500g" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>1.75mm</td>
+						<td>1kg</td>
+						<td>195-225ºC</td>
+						<td>No</td>
+						<td>Yes</td>
+						<td>No</td>
+						<td class="text-right">$40.00</td>
+						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-exotic/products/carbon-fiber-pla-500g" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td rowspan="2">Light brown with wood dust—infused</td>
+						<td rowspan="2"><img src="/images/filament/samples/robo-pla-wood.png"></td>
+						<td>1.75mm</td>
+						<td>500g</td>
+						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
+						<td>Yes</td>
+						<td class="text-right">$35.00</td>
+						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-exotic/products/pla-wood-500g" target="_blank">Link</a></td>
+					</tr>
+          <tr>
+						<td>1.75mm</td>
+						<td>1kg</td>
+						<td>195-225ºC</td>
+						<td>No</td>
+						<td>No</td>
+						<td>Yes</td>
+						<td class="text-right">$29.99</td>
+						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-exotic/products/natural-wood-pla" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>Metallic gold with metal flakes—infused</td>
+						<td><img src="/images/filament/samples/robo-pla-metallic-gold.png"></td>
+						<td>1.75mm</td>
+						<td>500g</td>
+						<td>195-225ºC</td>
+						<td>No</td>
+						<td>Yes</td>
+						<td>No</td>
+						<td class="text-right">$35.00</td>
+						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-exotic/products/pla-gold-metallic-500g" target="_blank">Link</a></td>
+					</tr>
+	
+					<!-- ABS -->
+					<!--   Robo3D.com -->
+					<tr>
+						<th scope="row" rowspan="5">ABS</th>
+						<td rowspan="5">Robo3D</td>
+						<td>Arctic White</td>
+						<td><img src="/images/filament/samples/robo-abs-arctic-white.png"></td>
+						<td>1.75mm</td>
+						<td>1kg</td>
+						<td>225-250ºC</td>
+						<td>Yes</td>
+						<td>No</td>
+						<td>No</td>
+						<td class="text-right">$35.00</td>
+						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-abs/products/white-abs-1-kg-spool" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>Green</td>
+						<td><img src="/images/filament/samples/robo-abs-green.png"></td>
+						<td>1.75mm</td>
+						<td>1kg</td>
+						<td>225-250ºC</td>
+						<td>Yes</td>
+						<td>No</td>
+						<td>No</td>
+						<td class="text-right">$35.00</td>
+						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-abs/products/green-abs-1-kg-spool" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>Glow-in-the-dark Green</td>
+						<td><img src="/images/filament/samples/robo-abs-glow-green.png"></td>
+						<td>1.75mm</td>
+						<td>1kg</td>
+						<td>225-250ºC</td>
+						<td>Yes</td>
+						<td>No</td>
+						<td>No</td>
+						<td class="text-right">$20.00</td>
+						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-abs/products/glow-in-the-dark-green-abs-1-kg" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>Pink</td>
+						<td><img src="/images/filament/samples/robo-abs-pink.png"></td>
+						<td>1.75mm</td>
+						<td>1kg</td>
+						<td>225-250ºC</td>
+						<td>Yes</td>
+						<td>No</td>
+						<td>No</td>
+						<td class="text-right">$17.50</td>
+						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-abs/products/pink-abs-1kg-spool" target="_blank">Link</a></td>
+					</tr>
+					<tr>
+						<td>Purple</td>
+						<td><img src="/images/filament/samples/robo-abs-purple.png"></td>
+						<td>1.75mm</td>
+						<td>1kg</td>
+						<td>225-250ºC</td>
+						<td>Yes</td>
+						<td>No</td>
+						<td>No</td>
+						<td class="text-right">$17.50</td>
+						<td class="text-center"><a href="https://store.robo3d.com/collections/filament-abs/products/purple-abs-1kg-spool" target="_blank">Link</a></td>
 					</tr>
 				</tbody>
 			</table>
