--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -14,6 +14,7 @@
 				<li id="parts"><a href="/hardware/parts-by-printer-by-vendor">Parts</a></li>
 				<li id="software"><a href="/software/software-by-type-by-vendor">Software</a></li>
 				<li id="consumables"><a href="/consumables">Consumables</a></li>
+				<li id="videos"><a href="/videos">Videos</a></li>
 				<li id="about"><a href="/about">About</a></li>
 			</ul>
 		</div>
