--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <% include header %>
+<link href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC" rel="stylesheet">
 <body>
 	<% include navbar %>
 
@@ -15,6 +16,13 @@
 			<div class="panel-heading">Why we started all this...</div>
 			<div class="panel-body">
 				<p>This website was started as a place to collect together the information we hobbyists need: printer hardware information, part sourcing links, upgrade tutorials, software upgrades, troubleshooting tips, whatever you need.</p>
+				<br/><hr width="40%"><br/>
+				<p>Email: <a href="mailto:info@Robo.fyi?subject=Robo.fyi%20website">Contact</a><br/></p>
+				<p style='font-family: "Carrois Gothic SC", sans-serif; font-size: 200%'>Robo.fyi<br/>
+					P.O. Box 70217<br/>
+					San Diego, CA 92167
+				</p>
+				<img src="/images/golden-hill.jpg">
 			</div>
 		</div>
 
