--- a/consumables/content.ejs
+++ b/consumables/content.ejs
@@ -3,5 +3,154 @@
 	<div class="col-md-10">
 		<h2 onClick='document.location="/consumables/filament-by-type-by-vendor";'>Filament by Type by Vendor</h2>
 		<p>Go <a href="/consumables/filament-by-type-by-vendor">here</a> for the filament database.</p>
+		<hr>
+		<h2>Filament Information by Type</h2>
+		<table class="table table-bordered table-hover table-responsive">
+			<thead>
+				<tr>
+					<th>Type</th>
+					<th>Properties</th>
+					<th>Uses</th>
+					<th>Hotend Temp</th>
+					<th>Bed Temp</th>
+					<th>Strength</th>
+					<th>Density</th>
+					<th>Flexibility</th>
+					<th>Durability</th>
+					<th>Difficulty</th>
+					<th width="10%">Notes</th>
+				</tr>
+			</thead>
+			<tbody>
+				<!-- PLA -->
+				<tr>
+					<td scope="row" rowspan="2">PLA</td>
+					<td>Easy to print</td>
+					<td rowspan="2">Consumer Products</td>
+					<td rowspan="2"><nobr>195-225ºC</nobr></td>
+					<td rowspan="2"><nobr>N/A</nobr></td>
+					<td rowspan="2">Medium</td>
+					<td rowspan="2">1240 kg/m<sup>3</sup></td>
+					<td rowspan="2">Low</td>
+					<td rowspan="2">Medium</td>
+					<td rowspan="2">Low</td>
+					<td rowspan="2"></td>
+				</tr>
+				<tr>
+					<td>Biodegradable</td>
+				</tr>
+				<!-- ABS -->
+				<tr>
+					<td scope="row" rowspan="2">ABS</td>
+					<td>Durable</td>
+					<td rowspan="2">Functional Products</td>
+					<td rowspan="2"><nobr>210-250ºC</nobr></td>
+					<td rowspan="2"><nobr>50-100ºC</nobr></td>
+					<td rowspan="2">Medium</td>
+					<td rowspan="2">1010 kg/m<sup>3</sup></td>
+					<td rowspan="2">Medium</td>
+					<td rowspan="2">High</td>
+					<td rowspan="2">Medium</td>
+					<td rowspan="2"></td>
+				</tr>
+				<tr>
+					<td>Impact resistant</td>
+				</tr>
+				<!-- PETG -->
+				<tr>
+					<td scope="row" rowspan="2">PETG<br/>(XT, <nobr>N-Vent</nobr>)</td>
+					<td>More flexible than PLA or ABS</td>
+					<td rowspan="2">All</td>
+					<td rowspan="2"><nobr>220-235ºC</nobr></td>
+					<td rowspan="2"><nobr>N/A</nobr></td>
+					<td rowspan="2">Medium</td>
+					<td rowspan="2">&nbsp;</td>
+					<td rowspan="2">High</td>
+					<td rowspan="2">High</td>
+					<td rowspan="2">Medium</td>
+					<td rowspan="2"></td>
+				</tr>
+				<tr>
+					<td>Durable</td>
+				</tr>
+				<!-- Nylon -->
+				<tr>
+					<td scope="row" rowspan="3">Nylon</td>
+					<td>Strong</td>
+					<td rowspan="3">All</td>
+					<td rowspan="3"><nobr>220-260ºC</nobr></td>
+					<td rowspan="3"><nobr>50-100ºC</nobr></td>
+					<td rowspan="3">High</td>
+					<td rowspan="3">&nbsp;</td>
+					<td rowspan="3">High</td>
+					<td rowspan="3">High</td>
+					<td rowspan="3">Medium</td>
+					<td rowspan="3"></td>
+				</tr>
+				<tr>
+					<td>Flexible</td>
+				</tr>
+				<tr>
+					<td>Durable</td>
+				</tr>
+				<!-- TPE -->
+				<tr>
+					<td scope="row" rowspan="2">TPE</td>
+					<td>Extremely flexible</td>
+					<td>Elastic Parts</td>
+					<td rowspan="2"><nobr>220-235ºC</nobr></td>
+					<td rowspan="2"><nobr>40ºC</nobr></td>
+					<td rowspan="2">Low</td>
+					<td rowspan="2">&nbsp;</td>
+					<td rowspan="2">High</td>
+					<td rowspan="2">Medium</td>
+					<td rowspan="2">High</td>
+					<td rowspan="2">Print very slowly</td>
+				</tr>
+				<tr>
+					<td>Rubber-like</td>
+					<td>Wearables</td>
+				</tr>
+				<!-- TPU -->
+				<tr>
+					<td scope="row" rowspan="2">TPU</td>
+					<td>Extremely flexible</td>
+					<td>Elastic Parts</td>
+					<td rowspan="2"><nobr>220-235ºC</nobr></td>
+					<td rowspan="2"><nobr>N/A</nobr></td>
+					<td rowspan="2">Low</td>
+					<td rowspan="2">&nbsp;</td>
+					<td rowspan="2">High</td>
+					<td rowspan="2">Medium</td>
+					<td rowspan="2">High</td>
+					<td rowspan="2">Print slowly</td>
+				</tr>
+				<tr>
+					<td>Rubber-like</td>
+					<td>Wearables</td>
+				</tr>
+				<!-- ASA -->
+				<tr>
+					<td scope="row" rowspan="3">ASA</td>
+					<td>Rigid</td>
+					<td rowspan="3">Outdoor</td>
+					<td rowspan="3"><nobr>240-260ºC</nobr></td>
+					<td rowspan="3"><nobr>100-120ºC</nobr></td>
+					<td rowspan="3">Medium</td>
+					<td rowspan="3">&nbsp;</td>
+					<td rowspan="3">Low</td>
+					<td rowspan="3">High</td>
+					<td rowspan="3">Medium</td>
+					<td rowspan="3"></td>
+				</tr>
+				<tr>
+					<td>Durable</td>
+				</tr>
+				<tr>
+					<td>Weather resistant</td>
+				</tr>
+			</tbody>
+		</table>
+
 	</div>
 </div>
