--- a/videos/content.ejs
+++ b/videos/content.ejs
@@ -27,8 +27,16 @@
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/DdpeqfYwJQk?rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<h2>Robo R2 Review</h2>
-		<p>Here's a review and unboxing of the Robo R2 printer by Joel of the <a href="https://www.youtube.com/channel/UC_7aK9PpYTqt08ERh1MewlQ" target="_blank">3D Printing Nerd</a> YouTube channel 140k subscribers) during a live YouTube/Facebook/Instagram feed with guest appearance by Braydon of Robo 3D.</p>
+		<p>Here's a review and unboxing of the Robo R2 printer by Joel of the <a href="https://www.youtube.com/channel/UC_7aK9PpYTqt08ERh1MewlQ" target="_blank">3D Printing Nerd</a> YouTube channel (140k subscribers) during a live YouTube/Facebook/Instagram feed with guest appearance by Braydon of Robo 3D.</p>
 		<iframe width="560" height="315" src="https://www.youtube.com/embed/vp4wt_k0euA?rel=0" frameborder="0" allowfullscreen></iframe>
+
+		<h2>Robo R1 Arduino Board Replacement</h2>
+		<p>Here's an official Robo 3D tutorial of the Robo R1 printer's control board on the <a href="https://www.youtube.com/channel/UCGbjMx1XUzolm0AwXNhI34w" target="_blank">Robo 3D</a> YouTube channel (2k subscribers).</p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/LxZNRO6Vk0A?rel=0" frameborder="0" allowfullscreen></iframe>
+
+		<h2>Overview of the R1 Electrical System</h2>
+		<p>Here's a video talking about the entire printer's electrical system by Marquis Johnson of the <a href="https://www.youtube.com/channel/UCBGNc_mOP_amZNrNj6lAwHg" target="_blank">Novice Expert</a> YouTube channel (3k subscribers).</p>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/1jojLfToG7Y?rel=0" frameborder="0" allowfullscreen></iframe>
 
 	</div>
 </div>
