--- a/videos/content.ejs
+++ b/videos/content.ejs
@@ -3,40 +3,40 @@
 	<div class="col-md-10">
 		<h2>Robo C2 Review</h2>
 		<p>Here's a (non-paid) review of the Robo C2 printer by Erin of the <a href="https://www.youtube.com/channel/UCEcNXmr7DYq1XxpWHSxaN0w" target="_blank">Hacker House</a> YouTube channel (88k subscribers).</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/DmSlk_cnJS0?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="video" src="https://www.youtube.com/embed/DmSlk_cnJS0?rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<h2>Robo C2 Quick Start Guide</h2>
 		<p>Here's the official Robo 3D gettting started video guide of the Robo C2 printer.</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/J4ru9woAYso?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="video" src="https://www.youtube.com/embed/J4ru9woAYso?rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<h2>Robo R1 Suggestions</h2>
 		<p>Here's a suggestive guide of the Robo R1 printer by Marquis Johnson of the <a href="https://www.youtube.com/channel/UCBGNc_mOP_amZNrNj6lAwHg" target="_blank">Novice Expert</a> YouTube channel (3k subscribers).</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/I9HGDn_h_PY?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="video" src="https://www.youtube.com/embed/I9HGDn_h_PY?rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<h2>Overview of Gx- and Mx-related GCODE</h2>
 		<p>Here's a pair of videos talking about GCODE commands by Marquis Johnson of the <a href="https://www.youtube.com/channel/UCBGNc_mOP_amZNrNj6lAwHg" target="_blank">Novice Expert</a> YouTube channel (3k subscribers).</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/eZ43jbGSZ3g?rel=0" frameborder="0" allowfullscreen></iframe>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/vx-R9S_R7-I?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="video" src="https://www.youtube.com/embed/eZ43jbGSZ3g?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="video" src="https://www.youtube.com/embed/vx-R9S_R7-I?rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<h2>Robo R1+ Plus Getting Started Guide</h2>
 		<p>Here's the official Robo 3D gettting started video guide of the Robo R1+ Plus printer.</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/ZMom8oGhd4c?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="video" src="https://www.youtube.com/embed/ZMom8oGhd4c?rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<h2>Printing from the iOS App</h2>
 		<p>Here's the official Robo 3D iOS app guide of the Robo C2/R2 printers.</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/DdpeqfYwJQk?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="video" src="https://www.youtube.com/embed/DdpeqfYwJQk?rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<h2>Robo R2 Review</h2>
 		<p>Here's a review and unboxing of the Robo R2 printer by Joel of the <a href="https://www.youtube.com/channel/UC_7aK9PpYTqt08ERh1MewlQ" target="_blank">3D Printing Nerd</a> YouTube channel (140k subscribers) during a live YouTube/Facebook/Instagram feed with guest appearance by Braydon of Robo 3D.</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/vp4wt_k0euA?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="video" src="https://www.youtube.com/embed/vp4wt_k0euA?rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<h2>Robo R1 Arduino Board Replacement</h2>
 		<p>Here's an official Robo 3D tutorial of the Robo R1 printer's control board on the <a href="https://www.youtube.com/channel/UCGbjMx1XUzolm0AwXNhI34w" target="_blank">Robo 3D</a> YouTube channel (2k subscribers).</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/LxZNRO6Vk0A?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="video" src="https://www.youtube.com/embed/LxZNRO6Vk0A?rel=0" frameborder="0" allowfullscreen></iframe>
 
 		<h2>Overview of the R1 Electrical System</h2>
 		<p>Here's a video talking about the entire printer's electrical system by Marquis Johnson of the <a href="https://www.youtube.com/channel/UCBGNc_mOP_amZNrNj6lAwHg" target="_blank">Novice Expert</a> YouTube channel (3k subscribers).</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/1jojLfToG7Y?rel=0" frameborder="0" allowfullscreen></iframe>
+		<iframe class="video" src="https://www.youtube.com/embed/1jojLfToG7Y?rel=0" frameborder="0" allowfullscreen></iframe>
 
 	</div>
 </div>
